metadata/force-app/main/default/objects/Account/fields/AccountPicklist__c.field-meta.xml
<CustomField>
    <fullName>AccountPicklist__c</fullName>
    <description>hello world2#######</description>
    <label>AccountPicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Globaltestset</valueSetName>
    </valueSet>
</CustomField>