metadata/force-app/main/default/objects/Account/fields/AL_Text_Rich_Custom_Any__c.field-meta.xml
<CustomField>
    <fullName>AL_Text_Rich_Custom_Any__c</fullName>
    <label>AL Text Rich Custom_Any</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>