metadata/force-app/main/default/objects/Account/fields/CHeckbox_new__c.field-meta.xml
<CustomField>
    <fullName>CHeckbox_new__c</fullName>
    <defaultValue>false</defaultValue>
    <description>any descr</description>
    <label>CHeckbox new</label>
    <type>Checkbox</type>
</CustomField>