metadata/force-app/main/default/objects/Account/fields/Contact_AL__c.field-meta.xml
<CustomField>
    <fullName>Contact_AL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact lookup AL</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.FirstName</field>
            <operation>equals</operation>
            <value>AL1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contact lookup AL)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>