metadata/force-app/main/default/objects/Account/fields/CS_Picklist__c.field-meta.xml
<CustomField>
    <fullName>CS_Picklist__c</fullName>
    <label>Cari&apos;s Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cari_s_Value_Set_1</valueSetName>
    </valueSet>
</CustomField>