metadata/force-app/main/default/objects/Account/fields/Cus_Type__c.field-meta.xml
<CustomField>
    <fullName>Cus_Type__c</fullName>
    <label>Cus Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Typee</valueSetName>
    </valueSet>
</CustomField>