metadata/force-app/main/default/objects/Account/fields/Cust1__c.field-meta.xml
<CustomField>
    <fullName>Cust1__c</fullName>
    <label>Cust1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>