metadata/force-app/main/default/objects/Account/fields/CustChekSchema__c.field-meta.xml
<CustomField>
    <fullName>CustChekSchema__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CustChekSchema</label>
    <type>Checkbox</type>
</CustomField>