metadata/force-app/main/default/objects/Account/fields/Email_test__c.field-meta.xml
<CustomField>
    <fullName>Email_test__c</fullName>
    <label>Email test</label>
    <type>Email</type>
</CustomField>