metadata/force-app/main/default/objects/Account/fields/Field_New_2__c.field-meta.xml
<CustomField>
    <fullName>Field_New_2__c</fullName>
    <label>Field New 2</label>
    <type>TextArea</type>
</CustomField>