metadata/force-app/main/default/objects/Account/fields/formula_12_11__c.field-meta.xml
<CustomField>
    <fullName>formula_12_11__c</fullName>
    <description>test</description>
    <formula>Checkbox__c = false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formula 12.11</label>
    <type>Checkbox</type>
</CustomField>