metadata/force-app/main/default/objects/Account/fields/Location_look__c.field-meta.xml
<CustomField>
    <fullName>Location_look__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location Look</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>