metadata/force-app/main/default/objects/Account/fields/Multipicklist__c.field-meta.xml
<CustomField>
    <fullName>Multipicklist__c</fullName>
    <label>Multipicklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__JobStatus</valueSetName>
    </valueSet>
</CustomField>