metadata/force-app/main/default/objects/Account/fields/new_cust__c.field-meta.xml
<CustomField>
    <fullName>new_cust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>new cust</label>
    <type>Checkbox</type>
</CustomField>