metadata/force-app/main/default/objects/Account/fields/Newemail_FIELD__c.field-meta.xml
<CustomField>
    <fullName>Newemail_FIELD__c</fullName>
    <label>Newemail FIELD</label>
    <type>Email</type>
</CustomField>