metadata/force-app/main/default/objects/Account/fields/Number_Any__c.field-meta.xml
<CustomField>
    <fullName>Number_Any__c</fullName>
    <label>Number Any</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>