metadata/force-app/main/default/objects/Account/fields/pick1__c.field-meta.xml
<CustomField>
    <fullName>pick1__c</fullName>
    <label>pick1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>