metadata/force-app/main/default/objects/Account/fields/Pick__c.field-meta.xml
<CustomField>
    <fullName>Pick__c</fullName>
    <description>any desc</description>
    <label>Pick multi</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>123</fullName>
            </value>
            <value>
                <fullName>456</fullName>
            </value>
            <value>
                <fullName>789</fullName>
            </value>
            <value>
                <fullName>1011</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>