metadata/force-app/main/default/objects/Account/fields/razkevich__c.field-meta.xml
<CustomField>
    <fullName>razkevich__c</fullName>
    <label>razkevich</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PriceType</valueSetName>
    </valueSet>
</CustomField>