metadata/force-app/main/default/objects/Account/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>