metadata/force-app/main/default/objects/Account/fields/Test_formula__c.field-meta.xml
<CustomField>
    <fullName>Test_formula__c</fullName>
    <formula>NumberOfEmployees + 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test_formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>