metadata/force-app/main/default/objects/Account/fields/Test_Global_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Test_Global_Picklist__c</fullName>
    <label>Test Global Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Globaltestset</valueSetName>
    </valueSet>
</CustomField>