metadata/force-app/main/default/objects/Account/fields/Test_Multipicklist__c.field-meta.xml
<CustomField>
    <fullName>Test_Multipicklist__c</fullName>
    <label>Test Multipicklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
            <value>
                <fullName>KL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>