metadata/force-app/main/default/objects/Account/fields/Test_Object__c.field-meta.xml
<CustomField>
    <fullName>Test_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test_Object</label>
    <referenceTo>Test_Object__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>