metadata/force-app/main/default/objects/Account/fields/test_object_jj_2__c.field-meta.xml
<CustomField>
    <fullName>test_object_jj_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>test object jj 2</label>
    <referenceTo>test_object_jj_2__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>