metadata/force-app/main/default/objects/Account/fields/Test_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Test_Rollup__c</fullName>
    <label>Test_Rollup</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>