metadata/force-app/main/default/objects/Account/fields/TEST_TEST__c.field-meta.xml
<CustomField>
    <fullName>TEST_TEST__c</fullName>
    <label>TEST_TEST</label>
    <type>AutoNumber</type>
</CustomField>