metadata/force-app/main/default/objects/Account/fields/TestGeoLocation__c.field-meta.xml
<CustomField>
    <fullName>TestGeoLocation__c</fullName>
    <label>TestGeoLocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>