metadata/force-app/main/default/objects/Account/fields/TestObjectExternal__c.field-meta.xml
<CustomField>
    <fullName>TestObjectExternal__c</fullName>
    <label>TestObjectExternal</label>
    <length>40</length>
    <referenceTo>TestObjectExternal__x</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>ExternalLookup</type>
</CustomField>