metadata/force-app/main/default/objects/Account/fields/Text_AL__c.field-meta.xml
<CustomField>
    <fullName>Text_AL__c</fullName>
    <label>Text AL New</label>
    <length>100</length>
    <type>Text</type>
</CustomField>