metadata/force-app/main/default/objects/Account/fields/Text_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Text_Encrypted__c</fullName>
    <label>Text Encrypted</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>