metadata/force-app/main/default/objects/Account/fields/Text_long__c.field-meta.xml
<CustomField>
    <fullName>Text_long__c</fullName>
    <label>Text long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>