metadata/force-app/main/default/objects/Account/fields/tuesday__c.field-meta.xml
<CustomField>
    <fullName>tuesday__c</fullName>
    <label>tuesday</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>