metadata/force-app/main/default/objects/Account/fields/wednesday__c.field-meta.xml
<CustomField>
    <fullName>wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>wednesday</label>
    <type>Checkbox</type>
</CustomField>