metadata/force-app/main/default/objects/Account/fields/What__c.field-meta.xml
<CustomField>
    <fullName>What__c</fullName>
    <label>What</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cari_s_Value_Set_1</valueSetName>
    </valueSet>
</CustomField>