metadata/force-app/main/default/objects/Account/fields/X12_11regressionlookup__c.field-meta.xml
<CustomField>
    <fullName>X12_11regressionlookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>test</description>
    <label>12.11regressionlookup</label>
    <referenceTo>X12_11regression__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>