metadata/force-app/main/default/objects/Account/recordTypes/Rob_Test_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Rob_Test_Record_Type</fullName>
    <active>false</active>
    <label>Rob Test Record Type</label>
</RecordType>