metadata/force-app/main/default/objects/Account/recordTypes/X12_12regression.recordType-meta.xml
<RecordType>
    <fullName>X12_12regression</fullName>
    <active>true</active>
    <description>for test</description>
    <label>12.12regression</label>
</RecordType>