metadata/force-app/main/default/objects/Account/validationRules/Dup_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Dup_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Name = &quot;123&quot;</errorConditionFormula>
    <errorMessage>duplicate name</errorMessage>
</ValidationRule>